flowlog-build/tests/errors/typechecker/tuple_field_pack_subtype.dl
.type UserId    <: symbol
.type ProductId <: symbol
.type Box = (u: UserId)
.decl In(p: ProductId)
.decl Out(b: Box)
.input In(IO="file", filename="In.csv", delimiter=",")
.output Out
Out(box) :- In(p), box = (p,).
